--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -53,25 +53,25 @@
                         <div class="col-xl-2 col-lg-2 col-md-2">
                             <div class="logo">
                                 <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:130px"></a>
-                                <!-- <div>NetREx</div> -->
                             </div>
                         </div>
                         <div class="col-xl-10 col-lg-10 col-md-10">
                             <!-- Main-menu -->
                             <div class="main-menu f-right d-none d-lg-block">
                                 <nav>
-                                    <ul id="navigation">    
+                                    <ul id="navigation">
                                         <li><a href="index.html">Home</a></li>
-                                        <li><a href="overview.html">Overview</a></li>
                                         <li><a href="query.html">Query</a>
                                         <li><a>Browse</a>
                                             <ul class="submenu">
                                                 <li><a href="module.html">Module Wise</a></li>
                                                 <li><a href="condition.html">Condition Wise</a></li>
+                                                <li><a href="pathway.html">Pathway Wise</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
-                                        <li  class="active"><a href="contact.html">Contact</a></li>
+                                        <li><a href="tutorial.pdf">Help</a></li>
+                                        <li class="active"><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -88,18 +88,7 @@
     </header>
 
     <!-- Slider Area Start-->
-    <div class="services-area">
-        <div class="container">
-            <!-- Section-tittle -->
-            <div class="row d-flex justify-content-center">
-                <div class="col-lg-8">
-                    <div class="section-tittle text-center mb-80">
-                        <h2>Contact Us​</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <div class="services-area"></div>
     <!-- Slider Area End-->
 
     <!-- ================ contact section start ================= -->
@@ -164,97 +153,9 @@
                     </div>
                 </div>
             </div>
-        </section>
+    </section>
     <!-- ================ contact section end ================= -->
     
-    <footer>
-
-        <!-- Footer Start-->
-       <div class="footer-main">
-         <div class="footer-area footer-padding">
-             <div class="container">
-                 <div class="row  justify-content-between">
-                     <div class="col-lg-3 col-md-4 col-sm-8">
-                          <div class="single-footer-caption mb-30">
-                               <!-- logo -->
-                              <div class="footer-logo">
-                                  <a href="index.html"><img src="assets/img/logo/f1.png" alt="" style="width:100px"></a>
-                              </div>
-                              <div class="footer-tittle">
-                                  <div class="footer-pera">
-                                      <p class="info1">A visualizer for the correlation network of rice genes based on fold changes.</p>
-                                 </div>
-                              </div>
-                          </div>
-                     </div>
-                     <div class="col-lg-2 col-md-4 col-sm-5">
-                         <div class="single-footer-caption mb-50">
-                             <div class="footer-tittle">
-                                 <h4>Quick Links</h4>
-                                 <ul>
-                                     <li><a href="index.html">Home</a></li>
-                                     <li><a href="overview.html">About</a></li>
-                                     <li><a href="query.html">Query</a></li>
-                                     <li><a href="datasets.html">Datasets</a></li>
-                                     <li><a href="contact.html">Contact</a></li>
-                                 </ul>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="col-lg-2 col-md-4 col-sm-7">
-                         <div class="single-footer-caption mb-50">
-                             <div class="footer-tittle">
-                                 <h4>Support</h4>
-                                 <ul>
-                                     <li><a href="contact.html">Report a bug</a></li>
-                                     <li><a href="contact.html">Privacy Policy</a></li>
-                                     <li><a href="contact.html">Terms & Conditions</a></li>
-                                     <li><a href="contact.html">Sitemap</a></li>
-                                     <li><a href="contact.html">FAQs</a></li>
-                                 </ul>
-                             </div>
-                         </div>
-                     </div>
-                     <div class="col-lg-3 col-md-6 col-sm-8">
-                         <div class="single-footer-caption mb-50">
-                             <div class="footer-tittle">
-                                 <h4>Newsletter</h4>
-                                 <div class="footer-pera footer-pera2">
-                                  <p>For notification for any updates please subscribe!</p>
-                              </div>
-                              <!-- Form -->
-                              <div class="footer-form">
-                                  <div id="mc_embed_signup">
-                                      <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative mail_part" novalidate="true">
-                                          <input type="email" name="EMAIL" id="newsletter-form-email" placeholder=" Email Address " class="placeholder hide-on-focus" onfocus="this.placeholder = ''" onblur="this.placeholder = ' Email Address '">
-                                          <div class="form-icon">
-                                              <button type="submit" name="submit" id="newsletter-submit" class="email_icon newsletter-submit button-contactForm"><img src="assets/img/shape/form_icon.png" alt=""></button>
-                                          </div>
-                                          <div class="mt-10 info"></div>
-                                      </form>
-                                  </div>
-                              </div>
-                             </div>
-                         </div>
-                     </div>
-                 </div>
-                 <!-- Copy-Right -->
-                 <div class="row align-items-center">
-                     <div class="col-xl-12 ">
-                         <div class="footer-copy-right">
-                            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-   Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This application is made with <i class="ti-heart" aria-hidden="true"></i> by <a href="https://researchweb.iiit.ac.in/~mayank.musaddi" target="_blank">Mayank Musaddi</a>
-   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-                         </div>
-                     </div>
-                 </div>
-             </div>
-         </div>
-       </div>
-        <!-- Footer End-->
- 
-    </footer>
-
     <!-- JS here -->
 	
 		<!-- All JS Custom Plugins Link Here here -->
