--- a/frontend/condition.html
+++ b/frontend/condition.html
@@ -114,8 +114,8 @@
 				</p>
 
 			<div>
-				<!-- <form class="form-contact" action="/netrex/load" id="conditionForm"> -->
-				<form class="form-contact" action="/load" id="conditionForm">
+				<form class="form-contact" action="/netrex/load" id="conditionForm">
+				<!-- <form class="form-contact" action="/load" id="conditionForm"> -->
 					<div class="row">
 						<div class="input-group-icon col-sm-3"><p>Species : </p></div>
 						<div class="input-group-icon col-sm-8">
