--- a/frontend/module.html
+++ b/frontend/module.html
@@ -157,7 +157,7 @@
 				<nav>
 					<div class="nav nav-tabs" id="nav-tab" role="tablist">
 					  <a class="nav-item nav-link active" id="nav-node-tab" data-toggle="tab" href="#nav-node" role="tab" aria-controls="nav-node" aria-selected="true">Nodes</a>
-					  <a class="nav-item nav-link" id="nav-go-tab" data-toggle="tab" href="#nav-go" role="tab" aria-controls="nav-go" aria-selected="false">GO</a>
+					  <a class="nav-item nav-link" id="nav-go-tab" data-toggle="tab" href="#nav-go" role="tab" aria-controls="nav-go" aria-selected="false">GO Enrichment</a>
 					  <a class="nav-item nav-link" id="nav-edge-tab" data-toggle="tab" href="#nav-edge" role="tab" aria-controls="nav-edge" aria-selected="false">Edges</a>
 					</div>
 				</nav>
