--- a/frontend/pathway.html
+++ b/frontend/pathway.html
@@ -116,7 +116,7 @@
 					showing a classified list of the genes according to their pathways.
 				</p>
 
-			<div class="row">
+			<div>
 				<!-- <form class="form-contact" action="/netrex/pathway" id="conditionForm"> -->
 				<form class="form-contact" action="/pathway" id="conditionForm">
 					<div class="row">
@@ -177,8 +177,8 @@
 					</div>
 				</form>
 			</div>
-
 		</div>
+		
 	</section>
     <!-- End Sample Area -->
 
