added node drag in validate graphs

--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -443,8 +443,10 @@
 <script src='./sigma/sigma.min.js'></script>
 <script src='./sigma/sigma.layout.forceAtlas2.min.js'></script>
 <script src='./sigma/sigma.plugins.filter.js'></script>
+<script src='./sigma/sigma.plugins.dragNodes.js'></script>
 <script src='./sigma/shape-library.js'></script>
 <script src='./sigma/sigma.renderers.customShapes.js'></script>
+<script src='./sigma/sigma.renderers.svg.js'></script>
 <script src='./sigma/sigma.plugins.animate.js'></script>
 <script src='./sigma/sigma.layout.noverlap.js'></script>
 <script src="./sigma/sigma.renderers.snapshot.js"></script>
